k8s/manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: t3-cloneathon
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Assuming you have cert-manager installed
spec:
  ingressClassName: nginx  # Adjust based on ingress controller
  tls:
  - hosts:
    - tantan.pablonara.com  
    secretName: app-tls-secret
  rules:
  - host: tantan.pablonara.com  
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
